Started using Date scalar on the server

--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -11,6 +11,7 @@
     "apollo-client": "^2.6.8",
     "apollo-link": "^1.2.13",
     "apollo-link-http": "^1.5.16",
+    "apollo-link-scalars": "^0.1.6",
     "apollo-link-ws": "^1.0.19",
     "apollo-utilities": "^1.3.3",
     "graphql": "^14.5.8",
